--- a/package.json
+++ b/package.json
@@ -4,13 +4,16 @@
   "description": "Neon POS API Commercial Build",
   "main": "index.ts",
   "scripts": {
-    "start": "node index.ts",
+    "start": "ts-node ./src/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/express": "^4.17.21",
     "@types/express-validator": "^3.0.0",
+    "@types/mysql": "^2.15.26",
+    "@types/node": "^20.14.2",
     "axios": "^1.7.2",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
@@ -24,6 +27,8 @@
     "mysql": "^2.18.1",
     "nodemon": "^3.1.3",
     "socket.io": "^4.7.5",
-    "sse-express": "^1.0.2"
+    "sse-express": "^1.0.2",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.4.5"
   }
 }
