--- a/vercel.json
+++ b/vercel.json
@@ -9,8 +9,8 @@
     ],
     "routes": [
      {
-      "src": "/(.*)",
-      "dest": "./src/index.ts"
+      "src": "/src/(.*)",
+      "dest": "/src/index.ts"
      }
     ]
 }
