--- a/vercel.json
+++ b/vercel.json
@@ -7,9 +7,15 @@
       "config": { "includeFiles": ["dist/**"] }
      }
     ],
+    "rewrites": [
+        {
+            "source": "/(.*)",
+            "destination": "/src/index.ts"
+        }
+    ],
     "headers": [
         {
-            "source": "/api/(.*)",
+            "source": "/(.*)",
             "headers": [
                 { "key": "Access-Control-Allow-Credentials", "value": "true" },
                 { "key": "Access-Control-Allow-Origin", "value": "*" },
@@ -17,11 +23,5 @@
                 { "key": "Access-Control-Allow-Headers", "value": "X-CSRF-Token, X-Requested-With, Accept, Accept-Version, Content-Length, Content-MD5, Content-Type, Date, X-Api-Version, x-access-token" }
             ]
         }
-    ],
-    "routes": [
-     {
-      "src": "/(.*)",
-      "dest": "/src/index.ts"
-     }
     ]
 }
